# spliceextractor

./: CMakeLists.txt  README.md
cmake/: htslib.cmake
examples/: in.bam
src/: arg_parse.cpp  spliceextractor.cpp
